# violette

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .size-limit.json  .tool-versions  CNAME  CONTRIBUTING.md  README.md  dune  dune-project  eslint.config.js  index.css  index.html  index.ml  index.tsx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.base.json  tsconfig.json  violette.opam  vite.config.js  vite.config.ts  wrangler.toml
.github/workflows/: checks.yaml  checks.yml  deploy.yaml  push.yaml  release.yaml  release.yml
src/: index.css  index.tsx  subsonic.ts  tsconfig.json
src/_core/: albumCard.tsx  alert.tsx  artistCard.tsx  button.tsx  card.tsx  cardGrid.tsx  container.tsx  coverArt.tsx  createCoverArtSrcSet.ts  deepEqual.ts  dropdownMenu.tsx  emptyState.tsx  footer.tsx  formatDuration.ts  formatGain.ts  fx.spec.ts  fx.ts  headings.tsx  iconButton.tsx  input.tsx  label.tsx  localStorage.ts  logo.tsx  measureScrollbar.ts  mediaHeader.tsx  mediaLinks.tsx  mergeIntoMap.ts  nowPlaying.tsx  playbackPosition.tsx  player.tsx  playerPosition.tsx  playerToolbar.tsx  popover.tsx  popoverContent.tsx  preloadCoverArt.tsx  prose.tsx  queue.tsx  queueContext.tsx  radio.tsx  radioGroup.tsx  (+15 more)
src/api/: subsonic.ts  types.ts
src/bro/: Bro.ml  dune
src/clsx/: clsx.ml  dune
src/crypto/: crypto.ml  dune
src/cva/: cva.ml  dune
src/domExtra/: DomExtra.ml  domExtra.ml  dune
src/domParser/: domParser.ml  dune
src/fastCheck/: dune  fastCheck.ml
src/floatingUI/: FloatingUI.ml  dune
src/form/: dune  form.ml
src/fx/: Fx.ml  dune  fx.ml  fx.spec.ts  fx.tsx
src/fx_spec/: dune  fx_spec.ml
src/jsExtra/: dune  symbol.ml
src/layout/: layout.tsx
src/lucideReact/: Icon.ml  LucideReact.ml  dune  lucideReact.ml
src/mediaSession/: MediaSession.ml  dune  mediaSession.ml
src/mergeIntoMap/: MergeIntoMap.ml  dune  mergeIntoMap.ml  mergeIntoMap.ts
src/monads/: Monads.ml  dune
src/pages/: AlbumPage.ml  ArtistPage.ml  ArtistsPage.ml  LoginPage.ml  album.tsx  albumPage.ml  albumPage.module.css  albumPage.tsx  artist.tsx  artistPage.ml  artistPage.module.css  artistPage.tsx  artists.tsx  artistsPage.ml  artistsPage.module.css  artistsPage.tsx  dune  login.tsx  (+3 more)
(+368 files in other folders)
